# SproutML

./: LICENSE  README.md  pyproject.toml  test.py
src/: __init__.py  activation.py  activations.py  ann.py  neat.py  neural_network.py  neuroevolution.py
src/complex/: __init__.py  gru.py  layer.py  network.py  recurrent.py
src/sproutml.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ann.py  test_neat.py
